[package]
name = "cargotomllsp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
lsp-server = "*"
lsp-types = "*"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
openssl = { version = "*", features = ["vendored"] }
once_cell = "1.19.0"
