[package]
name = "cargotomllsp"
version = "0.1.0"
edition = "2021"
license = "MIT"
description = "A LSP server for Cargo.toml files"
repository = "https://github.com/BlankTiger/cargotomllsp"
readme = "README.md"
keywords = ["lsp", "cargo", "toml"]
categories = ["development-tools"]

[dependencies]
anyhow = "1.0.75"
lsp-server = "0.7.6"
lsp-types = "0.95.0"
reqwest = { version = "0.11.23", features = ["json"] }
serde = { version = "1.0.193", features = ["derive"] }
serde_json = "1.0.108"
tokio = { version = "1.35.1", features = ["macros", "rt-multi-thread"] }
openssl = { version = "0.10.63", features = ["vendored"] }
once_cell = "1.19.0"
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
